<?xml version="1.0"?>
<package format="3">
  <name>application_layer</name>
  <version>0.1.0</version>
  <description>Application Layer: Grasp Manager, Motion & OMPL Planners</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ompl</depend>

  <!-- Interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>